--- a/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="badge">
-    <button mat-stroked-button color="primary" matBadge ="{{ closed }}">TASKS  FINALIZADAS</button>
+    <button (click)= " navegarParaFinalizar()" mat-stroked-button color="primary" matBadge ="{{ closed }}">TASKS  FINALIZADAS</button>
 
 
   </div>
