--- a/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.html
@@ -17,7 +17,7 @@
             </mat-card-header>
              
             <div class="actions">
-                <button mat-mini-fab color="primary">
+                <button (click)="finalizar(item)" mat-mini-fab color="primary">
                     <mat-icon>done</mat-icon>
                   </button>
 
