--- a/Projeto-TODO/Front-end/front/todo/src/app/components/create/create.component.css
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/create/create.component.css
@@ -1,5 +1,5 @@
 form{
-    width: 85%;
+    width: 70%;
     margin: 2rem auto 0 auto ;
     text-align: center;
 
@@ -23,6 +23,7 @@ form{
 
 .buttons {
     width: 100%;
+    text-align: start;
 }
 
 button {
