--- a/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.html
@@ -5,7 +5,7 @@
 
 
   </div>
-    <button class="novo-todo mat-elevation-z8" mat-stroked-button color="primary">NOVO TO-DO</button>
+    <button routerLink="create" class="novo-todo mat-elevation-z8" mat-stroked-button color="primary">NOVO TO-DO</button>
 
     <div class="content" *ngFor="let item of list">
         <mat-card class="mat-elevation-z8">
