--- a/Projeto-TODO/Front-end/front/todo/src/app/components/update/update.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/update/update.component.html
@@ -1,5 +1,5 @@
 <form>
-    <h1>NOVO TO-DO</h1>
+    <h1>EDITAR TO-DO</h1>
     <mat-form-field  class="data para finalizar" appearance="fill">
       
         <mat-label>data para finalizar</mat-label>
@@ -21,7 +21,7 @@
    </div>
    
    <div class="buttons">
-    <button (click)="create()" mat-stroked-button color="primary">CRIAR</button>
+    <button (click)="update()" mat-stroked-button color="primary">EDITAR TO-DO</button>
     <button (click)="cancel()" mat-stroked-button color="warn">CANCELAR</button>
 
 
