data formater edit

--- a/Projeto-TODO/Front-end/front/todo/src/app/components/create/create.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/create/create.component.html
@@ -21,8 +21,8 @@
    </div>
    
    <div class="buttons">
-    <button (click)="create()" mat-stroked-button color="primary">CRIAR</button>
-    <button (click)="cancel()" mat-stroked-button color="warn">CANCELAR</button>
+    <button (click)="create()" mat-flat-button color="primary">CRIAR</button>
+    <button (click)="cancel()" mat-flat-button color="warn">CANCELAR</button>
 
 
    </div>
