--- a/Projeto-TODO/Front-end/front/todo/src/app/components/header/header.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/header/header.component.html
@@ -3,6 +3,6 @@
         <img src="assets/img/logo.png" alt="logo-todo">
     </span>
     <span>
-        <h1>to-do app</h1>
+        <h1>To-Do App</h1>
     </span>
 </mat-toolbar>
