--- a/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.css
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/read-all/read-all.component.css
@@ -35,6 +35,7 @@ p {
     text-align: end;
     font-weight: 600;
     color: rgb(144, 111, 111);
+    font-family: monospace;
 
     margin-bottom: 0%;
 }
