--- a/Projeto-TODO/Front-end/front/todo/src/app/components/update/update.component.html
+++ b/Projeto-TODO/Front-end/front/todo/src/app/components/update/update.component.html
@@ -21,8 +21,8 @@
    </div>
    
    <div class="buttons">
-    <button (click)="update()" mat-stroked-button color="primary">EDITAR TO-DO</button>
-    <button (click)="cancel()" mat-stroked-button color="warn">CANCELAR</button>
+    <button (click)="update()" mat-flat-button color="primary">EDITAR TO-DO</button>
+    <button (click)="cancel()" mat-flat-button color="warn">CANCELAR</button>
 
 
    </div>
